# FactorySimulation

./: .gitignore  CMakeLists.txt  cachegrind_report.txt  helgrind_report.txt  interview_problem_2021_update.txt  mem_test_report.txt  sup.supp
hdr/: belt.h  catch_testcases.h  production.h  worker.h
src/: main.cpp
